--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Counter App</title>
 </head>
 
 <body>
+
+    <nav>
+        <div class="nav-main">
+            <div class="nav-header">
+                <h1 class="nav-h1">Counter App</h1> <i class="fa-solid fa-stopwatch-20"></i>
+            </div>
+            <ul class="menu">
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container">
+        <div class="counter-div">
+            <span class="count">0</span>
+            <hr style="width: 100%;" />
+            <div class="buttons">
+                <button class="subtract" title="Decrease ">
+                    <i class="fa-regular fa-hand-point-down downhand-styles subtract"></i>
+                </button>
+                <button class="reset" title="Reset ">
+                    <i class="fa-solid fa-hand-sparkles reset"></i>
+                </button>
+                <button class="add" title="Increase ">
+                    <i class="fa-regular fa-hand-point-up uphand-styles add"></i>
+                </button>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="script.js"></script>
 
 </body>
 
