Changed text in index.html from counter app to random number

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Counter App</title>
+    <title>Random Number</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <nav>
         <div class="nav-main">
             <div class="nav-header">
-                <h1 class="nav-h1">Counter App</h1> <i class="fa-solid fa-stopwatch-20"></i>
+                <h1 class="nav-h1">Random Number</h1> <i class="fa-solid fa-stopwatch-20"></i>
             </div>
             <ul class="menu">
                 <li>
